different graphs for real and intended defects

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <canvas id="functions" width="500" height="500"></canvas>
   </div>
   <div class="graphic">
-    <canvas id="defects" width="500" height="500"></canvas>    
+    <canvas id="defectsIntented" width="500" height="500"></canvas>    
+  </div>
+  <div class="graphic">
+    <canvas id="defectsReal" width="500" height="500"></canvas>    
   </div>
   <script src="script/index.js"></script>
 </body>
