adds fixed header

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     </label>
   </form>
 
+  <div style="height: 50px">&nbsp;</div>
+
   <div class="graphic">
     <canvas id="function" width="500" height="500"></canvas>
   </div>
