adds error graphics with h as x axe

--- a/index.html
+++ b/index.html
@@ -14,16 +14,8 @@
   
   <form class="inputData">
     <label>
-      Шаг h:
+      Максимальный шаг h:
       <input type="text" id="step" value="0.1">
-    </label>
-    <label>
-      Левая граница:
-      <input type="text" id="left" value="-5">
-    </label>
-    <label>
-      Правая граница:
-      <input type="text" id="right" value="5">
     </label>
   </form>
 
